# irc_bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  Vagrantfile  bots.py  colors.py  common.py  example_admins.toml  example_conf.toml  logger.py  main.py  plugin_api.py  requirements.txt  run.sh  troll.b64  trollb64.txt
ascii_art/: ASCII_BENGT3_HERE.txt  BENGT3_WHEELCHAIR.txt  CHATS_NOT_HARD.txt  NOOSCOPE.txt  README.md  angry_sunflower.txt  anjis_feet.txt  art_the_clown.txt  bawls.txt  bengt3_here.txt  bengt3_here_2.txt  birdshit_wifi.txt  bogdanoff.txt  boosted.txt  brazen.txt  bustas.txt  canada_honk.txt  candyman.txt  co60.txt  counterstrike.txt  covid-msg.txt  covid_msg.txt  dwayer.txt  echelon.txt  fuck_blaster.txt  holiday.txt  holiday_lrh.txt  ivermectin.txt  ivermectin_2.txt  jason_goldstriker.txt  killa_whale.txt  kxsol.txt  l0de.txt  lrh_antidissmas.txt  lrh_rap_contest.txt  magerage.txt  meatloaf.txt  meatloaf2.txt  meme_faces.txt  ngaa.txt  (+17 more)
bot_modules/py/: ascii.py  dictionary.py  discord_relay.py  enabled.toml  fishtank.py  ghetto_service.py  help_module.py  markov.py  plugin_manager.py  plugin_mgr.py  rpc.py  rumble.py  seen.py  spotify.py  trolldb.py  youtube.py
certs/: README.md  selfsigned.cert
rpc_lib/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
rpc_lib/src/nooscope_rpc/: api.py  constants.py  selfsigned.cert
