[metadata]
name = nooscope-rpc
version = 1.0.14
author = HARDCHATTING_THUG
author_email = cumdata@protonmail.com
description = Simple TCP client impl to interact with IRC_BOT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deacon-ralph/irc_bot
project_urls =
    Bug Tracker = https://github.com/deacon-ralph/irc_bot/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
install_requires =
    loguru >= 0.5.3
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src